--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "homepage": "https://github.com/SmileJR/Project2#readme",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.1.8",
-    "mongoose": "^5.3.6"
+    "mongoose": "^5.3.7"
   }
 }
