--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hbs": "^4.0.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.1.8",
-    "mongoose": "^5.3.7"
+    "mongoose": "^5.3.7",
+    "nodemon": "^1.18.5"
   }
 }
